# learning

lifehub-agent/: .gitignore  DEPLOY.md  README.md  pyproject.toml  render.yaml  requirements.txt
lifehub-agent/backend/: models.py
lifehub-agent/backend/agents/: graph.py  graph_legacy.py
lifehub-agent/backend/app/: main.py
lifehub-agent/backend/mcp/: __init__.py  client.py  config.py
lifehub-agent/backend/notes/: fitness_example.md  recipes_example.md
lifehub-agent/backend/rag/: __init__.py  embeddings.py  ingest_notes.py  store.py
lifehub-agent/backend/state/: tasks.json
lifehub-agent/backend/state/chroma/: chroma.sqlite3
lifehub-agent/backend/tools/: notes.py  tasks.py  weather.py
lifehub-agent/docs/: AI_CONCEPTS.md  SEQUENCE_DIAGRAM.md  SETUP_GUIDE.md  architecture.drawio  request-flow.drawio  sequence-diagram.drawio
lifehub-agent/frontend/: package-lock.json
lifehub-agent/frontend/src/app/: layout.tsx  page.tsx
